# asdf-coordinates-schemas

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.rst  README.md  bandit.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  coordinates.rst  frames.rst  index.rst  legacy.rst  manifests.rst
resources/manifests/: coordinates-1.1.0.yaml  coordinates-1.2.0.yaml  coordinates-1.3.0.yaml
resources/schemas/: angle-1.1.0.yaml  angle-1.2.0.yaml  earthlocation-1.1.0.yaml  earthlocation-1.2.0.yaml  latitude-1.1.0.yaml  latitude-1.2.0.yaml  longitude-1.1.0.yaml  longitude-1.2.0.yaml  representation-1.0.0.yaml  representation-1.1.0 .yaml  representation-1.1.0.yaml  representation-1.2.0.yaml  spectralcoord-1.1.0.yaml  spectralcoord-1.2.0.yaml
resources/schemas/frames/: baseframe-1.2.0.yaml  cirs-1.0.0.yaml  cirs-1.1.0.yaml  cirs-1.2.0.yaml  fk4-1.0.0.yaml  fk4-1.1.0.yaml  fk4-1.2.0.yaml  fk4noeterms-1.0.0.yaml  fk4noeterms-1.2.0.yaml  fk5-1.1.0.yaml  fk5-1.2.0.yaml  galactic-1.1.0.yaml  galactic-1.2.0.yaml  galactocentric-1.0.0.yaml  galactocentric-1.1.0.yaml  galactocentric-1.2.0.yaml  gcrs-1.0.0.yaml  gcrs-1.1.0.yaml  gcrs-1.2.0.yaml  icrs-1.2.0.yaml  icrs-1.3.0.yaml  itrs-1.0.0.yaml  itrs-1.1.0.yaml  itrs-1.2.0.yaml  precessedgeocentric-1.0.0.yaml  precessedgeocentric-1.1.0.yaml  precessedgeocentric-1.2.0.yaml  teme-1.0.0.yaml  tete-1.0.0.yaml
src/asdf_coordinates_schemas/: integration.py
tests/: conftest.py  test_integration.py  test_manifests.py  test_schemas.py
