[project]
name = 'asdf_coordinates_schemas'
description = 'ASDF schemas for coordinates'
readme = 'README.md'
requires-python = '>=3.9'
license = { file = 'LICENSE' }
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dependencies = [
  'asdf >= 2.12.1',
  'asdf-standard >= 1.1.0',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'tomli',
    'sphinx',
    'sphinx-asdf >= 0.1.3',
    'sphinx-astropy',
    'astropy >= 5.0.4',
    'graphviz',
    'matplotlib',
    'docutils',
    'sphinx-rtd-theme',
]
test = [
    'pytest',
    'asdf-astropy >= 0.2.0'
]

[project.urls]
'tracker' = 'https://github.com/asdf-format/asdf-coordinates-schemas/issues'
'documentation' = 'https://asdf-coordinates-schemas.readthedocs.io/en/latest/'
'repository' = 'https://github.com/asdf-format/asdf-coordinates-schemas'

[project.entry-points]
'asdf.resource_mappings' = { asdf_coordinates_schemas = 'asdf_coordinates_schemas.integration:get_resource_mappings' }

[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm[toml]>=3.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/asdf_coordinates_schemas/_version.py"

[tool.setuptools]
packages = ["asdf_coordinates_schemas", "asdf_coordinates_schemas.resources"]

[tool.setuptools.package-data]
"asdf_coordinates_schemas.resources" = ["resources/**/*.yaml"]

[tool.setuptools.package-dir]
'' = "src"
"asdf_coordinates_schemas.resources" = "resources"

[tool.pytest.ini_options]
asdf_schema_root = 'resources/schemas'
asdf_schema_tests_enabled = 'true'
asdf_schema_ignore_unrecognized_tag = 'true'
testpaths = """
    tests
    resources
"""
addopts = '--color=yes'

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
