[metadata]
name = asdf_coordinates_schemas
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
description = ASDF coordinates schemas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asdf-format/asdf-coordinates-schemas
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
[options]
python_requires = >=3.7
zip_safe = true
install_requires =
    asdf>=2.8.0

[options.extras_require]
test =
    pytest

[options.entry_points]
asdf.resource_mappings =
    asdf_coordinates_schemas = asdf_coordinates_schemas.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths =
    tests
    resources

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, .tox
