[metadata]
name = asdf_coordinates_schemas
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
description = ASDF coordinates schemas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asdf-format/asdf-coordinates-schemas
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
[options]
python_requires = >=3.8
zip_safe = true
install_requires =
    asdf>=2.12.1

[options.extras_require]
docs =
    sphinx
    sphinx-asdf>=0.1.3
    sphinx-astropy
    astropy>=5.0.4
    graphviz
    matplotlib
    docutils
    sphinx-rtd-theme
test =
    pytest
    pytest-sugar

[options.entry_points]
asdf.resource_mappings =
    asdf_coordinates_schemas = asdf_coordinates_schemas.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths =
    tests
    resources
addopts = --color=yes

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, .tox
